FLY wire David/force-app/main/default/objects/Activity/fields/ywr__touchpoints_Call_Connected__c.field-meta.xml
<CustomField>
    <fullName>ywr__touchpoints_Call_Connected__c</fullName>
    <formula>VALUE(IF(BEGINS(Subject, &quot;YW Call: Connected&quot;), &quot;1&quot;, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Call Connected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>