FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Yesware_Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>ywr__Yesware_Activity_Time__c</fullName>
    <formula>IF(OR(VALUE( MID( TEXT( CreatedDate -( 4 /24) ), 12, 2 ) ) = 0,
VALUE( MID( TEXT( CreatedDate -( 4 /24) ), 12, 2 ) ) = 12),&quot;12&quot;,
TEXT( VALUE( MID( TEXT( CreatedDate -( 4 /24) ), 12, 2 ) )
-
IF(VALUE( MID( TEXT( CreatedDate -( 4 /24) ), 12, 2 ) ) &lt; 12,0,12)))
&amp; &quot; &quot; &amp;
IF(VALUE( MID( TEXT( CreatedDate -( 4 /24) ), 12, 2 ) ) &lt; 12,&quot;AM&quot;,&quot;PM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yesware Activity Time</label>
    <type>Text</type>
</CustomField>