FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Yesware_Bounce__c.field-meta.xml
<CustomField>
    <fullName>ywr__Yesware_Bounce__c</fullName>
    <formula>VALUE(IF(BEGINS(Subject, &quot;Bounce Received:&quot;), &quot;1&quot;, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Yesware Bounce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>