FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Yesware_Call_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>ywr__Yesware_Call_Duration_Minutes__c</fullName>
    <description>Yesware Click to Call automatically updates this field.</description>
    <label>Yesware Call Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>