FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Yesware_ConnectCall__c.field-meta.xml
<CustomField>
    <fullName>ywr__Yesware_ConnectCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>populated through workflow rule: Yesware Connect Call</description>
    <label># Call - Connect</label>
    <type>Checkbox</type>
</CustomField>