FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Yesware_Meeting__c.field-meta.xml
<CustomField>
    <fullName>ywr__Yesware_Meeting__c</fullName>
    <formula>VALUE(IF(Not(IsTask), &quot;1&quot;, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Yesware Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>