FLY wire David/force-app/main/default/objects/Activity/fields/ywr__Yesware_Reply__c.field-meta.xml
<CustomField>
    <fullName>ywr__Yesware_Reply__c</fullName>
    <formula>VALUE(IF(BEGINS(Subject, &quot;Reply:&quot;), &quot;1&quot;, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Yesware Reply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>