FLY wire David/force-app/main/default/objects/Activity/fields/ywr__YeswareCampaignId__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareCampaignId__c</fullName>
    <label>YeswareCampaignId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>