FLY wire David/force-app/main/default/objects/Activity/fields/ywr__YeswareCampaignName__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareCampaignName__c</fullName>
    <label>YeswareCampaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>