FLY wire David/force-app/main/default/objects/Activity/fields/ywr__YeswareCampaignTotalTouches__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareCampaignTotalTouches__c</fullName>
    <label>YeswareCampaignTotalTouches</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>