FLY wire David/force-app/main/default/objects/Activity/fields/ywr__YeswareCampaignTouchNumber__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareCampaignTouchNumber__c</fullName>
    <label>YeswareCampaignTouchNumber</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>