FLY wire David/force-app/main/default/objects/Activity/fields/ywr__YeswareCampaignTouchType__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareCampaignTouchType__c</fullName>
    <label>YeswareCampaignTouchType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>