FLY wire David/force-app/main/default/objects/Activity/fields/ywr__YeswareIsCampaign__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareIsCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YeswareIsCampaign</label>
    <type>Checkbox</type>
</CustomField>