FLY wire David/force-app/main/default/objects/Activity/fields/ywr__YeswareTemplateIds__c.field-meta.xml
<CustomField>
    <fullName>ywr__YeswareTemplateIds__c</fullName>
    <label>Yesware Template Id(s)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>